# NN

./: .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  index.html
ANN/: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANN_ActvFunc.cpp  ANN_ActvFunc.hpp  ANN_Core.cpp  ANN_Core.hpp  ANN_CoreCPU.cpp  ANN_CoreCPU.hpp  ANN_CoreCPUWorker.cpp  ANN_CoreCPUWorker.hpp  ANN_CoreConfig.hpp  ANN_CoreGPU.cpp  ANN_CoreGPU.hpp  ANN_CoreGPUWorker.cpp  ANN_CoreGPUWorker.hpp  ANN_CoreMode.cpp  ANN_CoreMode.hpp  ANN_CoreType.cpp  ANN_CoreType.hpp  ANN_CostFunctionConfig.hpp  ANN_Device.cpp  ANN_Device.hpp  ANN_GPUBufferManager.cpp  ANN_GPUBufferManager.hpp  ANN_GPUKernelBuilder.cpp  ANN_GPUKernelBuilder.hpp  ANN_InputProvider.hpp  ANN_LayersConfig.cpp  ANN_LayersConfig.hpp  ANN_LogLevel.hpp  ANN_LossFunctionConfig.hpp  ANN_Mode.cpp  ANN_Mode.hpp  ANN_MonitoringConfig.hpp  ANN_Optimizer.cpp  ANN_Optimizer.hpp  ANN_Parameters.hpp  ANN_PredictMetadata.hpp  (+29 more)
ANN/docs/: api.html  architecture.html  examples.html  gpu.html  index.html  math-activations.html  math-backprop.html  math-initialization.html  math-loss.html  math-neuron.html  math-optimizers.html  math-propagation.html  math.html  quickstart.html
ANN/html/: api.html  architecture.html  examples.html  gpu.html  index.html  math.html  quickstart.html
ANN/opencl/: ANN_ActvFunc.cpp.cl  ANN_Backpropagate.cpp.cl  ANN_Defines.hpp.cl  ANN_IdxHelper.cpp.cl  ANN_Loss.cpp.cl  ANN_Propagate.cpp.cl  ANN_Update.cpp.cl  ActvFunc.cpp.cl  Defines.hpp.cl  Kernels.cpp.cl
ANN/tests/: test_actvfunc.cpp  test_core.cpp  test_core_basic.cpp  test_core_basic2.cpp  test_core_exact.cpp  test_core_exact2.cpp  test_core_features.cpp  test_core_features2.cpp  test_gpu.cpp  test_gpu_basic.cpp  test_gpu_basic2.cpp  test_gpu_exact.cpp  test_gpu_features.cpp  test_gpu_multigpu.cpp  test_helpers.hpp  test_main.cpp  test_serialization.cpp  test_utils.cpp
CNN/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CNN_BatchNorm.cpp  CNN_BatchNorm.hpp  CNN_BatchNormParameters.hpp  CNN_Conv2D.cpp  CNN_Conv2D.hpp  CNN_Conv2DParameters.hpp  CNN_Core.cpp  CNN_Core.hpp  CNN_CoreCPU.cpp  CNN_CoreCPU.hpp  CNN_CoreCPUWorker.cpp  CNN_CoreCPUWorker.hpp  CNN_CoreConfig.hpp  CNN_CoreGPU.cpp  CNN_CoreGPU.hpp  CNN_CoreGPUWorker.cpp  CNN_CoreGPUWorker.hpp  CNN_CoreGPUWorkerConfig.cpp  CNN_CoreGPUWorkerConfig.hpp  CNN_CostFunctionConfig.hpp  CNN_Defines.hpp.cl  CNN_Device.cpp  CNN_Device.hpp  CNN_Flatten.cpp  CNN_Flatten.hpp  CNN_GPUBufferManager.cpp  CNN_GPUBufferManager.hpp  CNN_GPUKernelBuilder.cpp  CNN_GPUKernelBuilder.hpp  CNN_GlobalAvgPool.cpp  CNN_GlobalAvgPool.hpp  CNN_GlobalDualPool.cpp  CNN_GlobalDualPool.hpp  CNN_InputProvider.hpp  CNN_InstanceNorm.cpp  CNN_InstanceNorm.cpp.cl  (+52 more)
CNN/docs/: api.html  architecture-classes.html  architecture-memory.html  architecture-patterns.html  architecture-pipeline.html  architecture-training.html  architecture.html  examples.html  gpu-architecture.html  gpu-buffers.html  gpu-kernels.html  gpu-multi-gpu.html  gpu.html  index.html  layers-conv2d.html  layers-flatten.html  layers-globalavgpool.html  layers-globaldualpool.html  layers-instancenorm.html  layers-normalization.html  layers-pipeline.html  layers-pool.html  layers-relu.html  layers-residual.html  layers.html  math-activations.html  math-convolution.html  math-gradient-flow.html  math-initialization.html  math-instancenorm.html  math-normalization.html  math-optimizers.html  math-pooling.html  math.html  quickstart.html
CNN/html/: api.html  architecture.html  examples.html  gpu.html  index.html  math.html  quickstart.html
CNN/opencl/: CNN_Backpropagate.cpp.cl  CNN_BatchNorm.cpp.cl  CNN_Bridge.cpp.cl  CNN_Defines.hpp.cl  CNN_GEMM.cpp.cl  CNN_GlobalAvgPool.cpp.cl  CNN_GlobalDualPool.cpp.cl  CNN_Im2Col.cpp.cl  CNN_InstanceNorm.cpp.cl  CNN_Kernels.cpp.cl  CNN_Normalization.cpp.cl  CNN_Propagate.cpp.cl  CNN_Residual.cpp.cl  CNN_Update.cpp.cl
CNN/scripts/: ensure-blank-lines.py
CNN/tests/: test_cnn.cpp  test_conv2d.cpp  test_cpu_globalavgpool.cpp  test_cpu_globaldualpool.cpp  test_cpu_instancenorm.cpp  test_cpu_integration_basic.cpp  test_cpu_integration_basic2.cpp  test_cpu_integration_basic3.cpp  test_cpu_integration_batchnorm.cpp  test_cpu_integration_costfunc.cpp  test_cpu_integration_exact.cpp  test_cpu_integration_globalpool.cpp  test_cpu_integration_residual.cpp  test_cpu_layers.cpp  test_cpu_layers2.cpp  test_cpu_residual.cpp  test_globaldualpool.cpp  test_gpu.cpp  test_gpu_basic.cpp  test_gpu_basic2.cpp  test_gpu_basic3.cpp  test_gpu_basic4.cpp  test_gpu_batchnorm.cpp  test_gpu_batchnorm2.cpp  (+16 more)
NN-CLI/: .gitignore  AGENTS.md  ANN-CLI_Loader.cpp  ANN-CLI_Loader.hpp  ANN-CLI_ProgressBar.cpp  ANN-CLI_ProgressBar.hpp  ANN-CLI_Utils.cpp  ANN-CLI_Utils.hpp  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  DELIVERABLES.md  DOCUMENTATION_MANIFEST.txt  EXPLORATION_COMPLETE.txt  EXPLORATION_INDEX.md  EXPLORATION_README.md  EXPLORATION_SUMMARY.md  FILE_LOCATIONS_AND_TESTS.md  IMPLEMENTATION_ANALYSIS.md  MATHEMATICAL_DETAILS.md  NN-CLI_ANNLoader.cpp  NN-CLI_ANNLoader.hpp  NN-CLI_ANNRunner.cpp  NN-CLI_ANNRunner.hpp  NN-CLI_App.cpp  NN-CLI_App.hpp  NN-CLI_AugmentationConfig.hpp  NN-CLI_AugmentationTransforms.hpp  NN-CLI_CNNLoader.cpp  NN-CLI_CNNLoader.hpp  NN-CLI_CNNRunner.cpp  NN-CLI_CNNRunner.hpp  NN-CLI_CalibrateController.cpp  NN-CLI_CalibrateController.hpp  NN-CLI_CalibrateRunner.cpp  NN-CLI_CalibrateRunner.hpp  NN-CLI_CalibrateUtils.cpp  NN-CLI_CalibrateUtils.hpp  NN-CLI_DataLoader.cpp  NN-CLI_DataLoader.hpp  NN-CLI_DataSplitter.cpp  (+71 more)
NN-Server/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  NN-Server_CoreHandle.hpp  NN-Server_CorePool.cpp  NN-Server_CorePool.hpp  NN-Server_HttpServer.cpp  NN-Server_HttpServer.hpp  NN-Server_IOConfig.hpp  NN-Server_ImageLoader.cpp  NN-Server_ImageLoader.hpp  NN-Server_Loader.cpp  NN-Server_Loader.hpp  NN-Server_Logger.cpp  NN-Server_Logger.hpp  NN-Server_NetworkType.hpp  NN-Server_RequestHandler.cpp  NN-Server_RequestHandler.hpp  README.md  build.sh  install.sh  main.cpp
(+191 files in other folders)
